--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nestjs/common": "^8.2.4",
     "@types/node": "^17.0.4",
+    "class-validator": "^0.13.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "typescript": "^4.5.4"
