--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@doopjs/func-js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "\"Functional Pattern to ts\"",
   "main": "dist/index.js",
   "types": "dist/index",
   "author": "Daniel Orlando Ortiz Pacheco",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "build": "rimraf dist && tsc",
     "prepublish": "npm run build"
   },
   "license": "MIT",
   "dependencies": {
     "@nestjs/common": "^8.2.4",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.4",
     "class-validator": "^0.13.2",
+    "jest": "^27.5.1",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
   }
 }
